# execNative

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mycommand.c  native-lib.c  native-lib.cpp
app/src/main/java/com/ssrlive/execnative/: MainActivity.java  MainActivity.kt  NativeWrapper.java  NativeWrapper.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
